# encoder_library

./: CMakeLists.txt  encoder.cpp  encoder.h
